BUG#33364 Online Backup: Purge statement missing

This patch adds the following commands:

PURGE BACKUP LOGS;
PURGE BACKUP LOGS TO <id>;
PURGE BACKUP LOGS BEFORE <datetime>;